// Copyright Â© 2021 Durudex

// This file is part of Durudex: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.

// Durudex is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.

// You should have received a copy of the GNU Affero General Public License
// along with Durudex. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

package durudex.user.post;

option go_package = "github.com/Durudex/durudex-user-service/internal/delivery/grpc/pb;pb";

import "google/protobuf/timestamp.proto";
import "internal/delivery/grpc/pb/types/link.proto";
import "internal/delivery/grpc/pb/types/id.proto";
import "internal/delivery/grpc/pb/types/status.proto";

service PostService {
  rpc Create (Post) returns (types.ID);
  rpc Get (types.ID) returns (Post);
  rpc Delete (types.ID) returns (types.Status);
}

message Post {
  uint64 id = 1;
  string description = 2;
  repeated types.Link attachments = 3;
  google.protobuf.Timestamp created_at = 4;
}
