/*
 * Copyright Â© 2021-2022 Durudex

 * This file is part of Durudex: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.

 * Durudex is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.

 * You should have received a copy of the GNU Affero General Public License
 * along with Durudex. If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package durudex.user;

option go_package = "github.com/durudex/durudex-user-service/internal/delivery/grpc/pb;pb";

import "google/protobuf/timestamp.proto";
import "internal/delivery/grpc/pb/types/uuid.proto";
import "internal/delivery/grpc/pb/types/status.proto";

service UserService {
  rpc Create (CreateRequest) returns (types.UUID);
  rpc GetByID (types.UUID) returns (User);
  rpc GetByCreds (GetByCredsRequest) returns (GetByCredsResponse);
  rpc ForgotPassword (ForgotPasswordRequest) returns (types.Status);
}

// Public user structure.
message User {
  string username = 1;
  google.protobuf.Timestamp joinedIn = 2;
  google.protobuf.Timestamp lastVisit = 3;
  bool verified = 4;
  string avatarUrl = 5;
}

// Create user request message.
message CreateRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// Request for getting user by credentials.
message GetByCredsRequest {
  string username = 1;
  string password = 2;
}

// Response for getting user by credentials.
message GetByCredsResponse {
  bytes id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp joinedIn = 4;
  google.protobuf.Timestamp lastVisit = 5;
  bool verified = 6;
  string avatarUrl = 7;
}

// Request for forgot password.
message ForgotPasswordRequest {
  string email = 1;
  string password = 2;
}
